--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,7 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  	<head>
-
-		<% meta title: "Blog | ThinkTech",
+	<% meta title: "Blog | ThinkTech",
           description: ""          
   %>
-  <% metamagic keywords: [:keywords, "blog", "blog thinktech", " blog calgary", "blog thintech calgary", "ThinkTech Blog"] %>
-
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
+  	<% metamagic keywords: [:keywords, "blog", "Blog thinktech", "blog thethinktech", "thinktech", "blog thinktech calgary", "thinktech calgary", "blog calgary ", "thethinktech calgary blog", "thinktech calgary"] %>
     
     <div id="home">
     	<div class="headerLine mar_topm10p">
@@ -80,8 +70,3 @@
 		</div>		
 		
     </div>
-
-    
-	</body>
-	
-</html>
