--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,7 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
     <% meta title: "Blog | ThinkTech",
           description: ""          
   %>
-  <% metamagic keywords: [:keywords, "", "", "", "", ""] %>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-</head>
-
-<body>
+    <% metamagic keywords: [:keywords, "blog", "Blog thinktech", "blog thethinktech", "thinktech", "blog thinktech calgary", "thinktech calgary", "blog calgary ", "thethinktech calgary blog", "thinktech calgary"] %>
 
     <div id="home">
         <div class="headerLine mar_topm10p">
@@ -43,6 +31,3 @@
             </div>
         </div>
     </div>
-   
-</body>
-</html>
