--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,56 +1,52 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-  <head>
-		<% meta title: "ThinkTech | Websites, SEO and Apps",
-          description: "Website and Mobile App Development in Calgary. We provide Web Design and Development, SEO and Digital Marketing, Custom Software Development."
-  %>
-  <% metamagic keywords: [:keywords, "Web development Calgary", "Web Design Calgary", "SEO Calgary", "Digital Marketing Calgary", "Websites Calgary", "Mobile App Development Calgary", "Mobile Development Calgary", "iPhone App Developer Calgary", "Android App Developer Calgary", "Search Engine Optimization Calgary", "Online Markiting Calgary", "Custom Software Development Calgary"] %>
+﻿<% meta title: "ThinkTech | Websites, SEO and Apps",
+          description: "Website and Mobile App Development in Calgary. We provide Web Design and Development, SEO and Digital Marketing, Custom Software Development." %>
+<% metamagic keywords: [:keywords, "Web development Calgary", "Web Design Calgary", "SEO Calgary", "Digital Marketing Calgary", "Websites Calgary", "Mobile App Development Calgary", "Mobile Development Calgary", "iPhone App Developer Calgary", "Android App Developer Calgary", "Search Engine Optimization Calgary", "Online Markiting Calgary", "Custom Software Development Calgary"] %>
+<% meta copyright: "TheThinkTech" %>
+    <% meta owner: "TheThinkTech" %>
+    <% meta distribution: "global" %>
+    <% meta rating: "general" %>
+    <% meta rel: { canonical: "http://www.thethinktech.ca/" } %>
   
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
-        <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
-		<link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
+<% content_for :link_script do %>
+<link href="https://plus.google.com/104929529486535940210" rel="publisher" />
+<link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
+<link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
+<link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
+<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="/assets/style.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
+<script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
+<script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
+<script type="text/javascript" src="/assets/camera.min.js"></script>
+<script type="text/javascript" src="/assets/myscript.js"></script>
+<script type="text/javascript" src="/assets/sorting.js" ></script>
+<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
+<script type="text/javascript" async defer
+        src="https://apis.google.com/js/platform.js?publisherid=104929529486535940210">
+</script>
+    <!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->		
 
-		<link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
-		<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="/assets/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
-		
-		<script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
-		<script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
-		<script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
-		<script type="text/javascript" src="/assets/camera.min.js"></script>
-		<script type="text/javascript" src="/assets/myscript.js"></script>
-		<script type="text/javascript" src="/assets/sorting.js" ></script>
-		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
-        <script type="text/javascript" async defer
-                src="https://apis.google.com/js/platform.js?publisherid=104929529486535940210">
-        </script>
-    <!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
-		
+<script>
+	jQuery(function(){
+			jQuery('#camera_wrap_1').camera({
+			transPeriod: 500,
+			time: 3000,
+			height: '490px',
+			thumbnails: false,
+			pagination: true,
+			playPause: false,
+			loader: false,
+			navigation: false,
+			hover: false
+		});
+	});
+</script>
+<% end %>
 
-		<script>
-			jQuery(function(){
-					jQuery('#camera_wrap_1').camera({
-					transPeriod: 500,
-					time: 3000,
-					height: '490px',
-					thumbnails: false,
-					pagination: true,
-					playPause: false,
-					loader: false,
-					navigation: false,
-					hover: false
-				});
-			});
-		</script>
-		
-	</head>
-	<body>
     
     <!--home start-->
     
@@ -427,7 +423,7 @@
              </div>
              <div class="row">
                <div class="col-lg-6 p45">
-                 <a href="/service-seo"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO & Digital Marketing</h3></a>
+                 <a href="/service-seo"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO &amp; Digital Marketing</h3></a>
                  <p class="text-md text-italic text-muted">
                    SEO is an ever-changing landscape. With smartest online strategies, and intelligent execution, we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
                  </p>
@@ -533,11 +529,7 @@
           </div>
 			</div>
 			
-			
-			
-			
-			
-			
+						
     </div>
     
 
@@ -565,16 +557,16 @@
     <div class="item active">
         <div class="row-fluid">
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><b>GLORY OF INDIA</b></h5>
+              <%= image_tag("clients/goi_client.png", class: "image_responsive client_logo", alt: "GLORY OF INDIA") %><h5><strong>GLORY OF INDIA</strong></h5>
             </div> 
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo", alt: "CMC") %><h5><b>CONFIDENT MARKETING CLUB</b></h5>
+              <%= image_tag("clients/CMC_client.png", class: "image_responsive client_logo", alt: "CMC") %><h5><strong>CONFIDENT MARKETING CLUB</strong></h5>
             </div>            
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><b>CMIT SOLUTIONS</b></h5>
+              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
             </div>
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/idea2ins_client.png", class: "image_responsive client_logo", alt: "IDEA 2 INCEPTION") %><h5><b>IDEA 2 INCEPTION</b></h5>
+              <%= image_tag("clients/idea2ins_client.png", class: "image_responsive client_logo", alt: "IDEA 2 INCEPTION") %><h5><strong>IDEA 2 INCEPTION</strong></h5>
             </div> 
         </div><!--/row-fluid-->
     </div><!--/item-->
@@ -582,18 +574,18 @@
     <div class="item">
         <div class="row-fluid">
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><b>CALGARY SERVICES PLUMBERS</b></h5>
+              <%= image_tag("clients/calgarysp.png", class: "image_responsive client_logo", alt: "Calgary Service Plumbers") %><h5><strong>CALGARY SERVICES PLUMBERS</strong></h5>
             </div>       
 
             <div class="col-xs-3 col-sm-3  text-center">
-              <%= image_tag("clients/logolel_client.png", class: "image_responsive client_logo", alt: "Leela Eco Spa") %><h5><b>Leela Eco Spa</b></h5>
+              <%= image_tag("clients/logolel_client.png", class: "image_responsive client_logo", alt: "Leela Eco Spa") %><h5><strong>Leela Eco Spa</strong></h5>
             </div>
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/peak1logo.jpg", class: "image_responsive client_logo", alt: "Peak1 Management Group") %><h5><b>Peak1 Management Group</b></h5>
+              <%= image_tag("clients/peak1logo.jpg", class: "image_responsive client_logo", alt: "Peak1 Management Group") %><h5><strong>Peak1 Management Group</strong></h5>
             </div>
             
             <div class="col-xs-3 col-sm-3 text-center">
-              <%= image_tag("clients/kennan-logo.png", class: "image_responsive client_logo", alt: "Ken-nan") %><h5><b>KEN-NAN Automotive Sales</b></h5>
+              <%= image_tag("clients/kennan-logo.png", class: "image_responsive client_logo", alt: "Ken-nan") %><h5><strong>KEN-NAN Automotive Sales</strong></h5>
             </div>
         </div><!--/row-fluid-->
     </div><!--/item-->
@@ -843,7 +835,7 @@
 					<ul>
 						<li><i class="fa fa-home"></i> Suite# 1000, 888 3st SW</li>
 						<li><i class="fa fa-phone"></i>+1 403 462 0868</li>
-						<li><a href="#"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
+						<li><a href="mailto:ashish@thethinktech.com" target="_blank"><i class="fa fa-envelope"></i>ashish@thethinktech.com</a></li>
 						<li><i class="fa fa-skype"></i>thethinktech</li>
 						<li><a href="https://twitter.com/thethinktech" target="_blank"><i class="fa fa-twitter"></i>Twitter</a></li>
 						<li><a href="https://www.facebook.com/thinktechsoftware" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a></li>
@@ -1069,10 +1061,6 @@
 
     </script>
 
-
-
-
-
 <script type="text/javascript">
     function search (id) {     
 	  var site = $('#site_id').val();	   
@@ -1082,9 +1070,3 @@
 	  }
   }
 </script>
-
-
-
-	</body>
-	
-</html>
