--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,18 +1,6 @@
-
 <% if blogger_signed_in? %>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% meta title: "Blog | ThinkTech"      
-  %>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">    
-</head>
-
-<body>
+    <% meta title: "Blog | ThinkTech" %>
 
     <div id="home">
         <div class="headerLine mar_topm10p">
@@ -36,9 +24,5 @@
             </div>
         </div>
     </div>
-
-   
-</body>
-</html>
 
 <% end %>
