--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,19 +1,6 @@
-
 <% if blogger_signed_in? %>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% meta title: "Blog | ThinkTech"        
-  %>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-</head>
-
-<body>
+    <% meta title: "Blog | ThinkTech" %>
 
     <div id="home">
         <div class="headerLine mar_topm10p">
@@ -30,17 +17,12 @@
             <div class="row">
                 <div class="col-xs-12 blog text-center">
                     <h2 id="col_black">New Article</h2>
-                </div>
-                
+                </div>                
                 <div class="col-xs-12">
                     <%= render "form" %>
                 </div>
             </div>            
         </div>
     </div>
-
-   
-</body>
-</html>
 
 <% end %>
