--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<%= metamagic %>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta content="TheThinkTech" name="copyright" />
+<meta content="general" name="rating" />
+<meta content="global" name="distribution" />
+<meta content="TheThinkTech" name="owner" />
 
-  <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
-        <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
-		<link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
+<%= metamagic %>
 
-		<link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
-		<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="/assets/style.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
-		
-		<script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
-		<script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
-		<script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
-		<script type="text/javascript" src="/assets/camera.min.js"></script>
-		<script type="text/javascript" src="/assets/myscript.js"></script>
-		<script type="text/javascript" src="/assets/sorting.js" ></script>
-		<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
-        <script type="text/javascript" async defer
-                src="https://apis.google.com/js/platform.js?publisherid=104929529486535940210">
-        </script>
-    <!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
-		
+<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+<%= csrf_meta_tags %>
 
-		<script>
-			jQuery(function(){
-					jQuery('#camera_wrap_1').camera({
-					transPeriod: 500,
-					time: 3000,
-					height: '490px',
-					thumbnails: false,
-					pagination: true,
-					playPause: false,
-					loader: false,
-					navigation: false,
-					hover: false
-				});
-			});
-		</script>
+<link href="https://plus.google.com/104929529486535940210" rel="publisher" />
+<link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
+<link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
+
+<link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
+<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="/assets/style.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
+
+<script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
+<script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
+<script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
+<script type="text/javascript" src="/assets/camera.min.js"></script>
+<script type="text/javascript" src="/assets/myscript.js"></script>
+<script type="text/javascript" src="/assets/sorting.js" ></script>
+<script type="text/javascript" src="/assets/jquery.isotope.js" ></script>
+<script type="text/javascript" async defer
+        src="https://apis.google.com/js/platform.js?publisherid=104929529486535940210">
+</script>
+<!--script type="text/javascript" src="/assets/jquery.nav.js"></script-->
+
+
+<script>
+	jQuery(function(){
+			jQuery('#camera_wrap_1').camera({
+			transPeriod: 500,
+			time: 3000,
+			height: '490px',
+			thumbnails: false,
+			pagination: true,
+			playPause: false,
+			loader: false,
+			navigation: false,
+			hover: false
+		});
+	});
+</script>
 
 </head>
 <body>
