--- a/app/views/static_pages/service_seo.html.erb
+++ b/app/views/static_pages/service_seo.html.erb
@@ -1,18 +1,7 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  	<head>
-
-		<% meta title: "SEO & Digital Marketing | ThinkTech",
+	<% meta title: "SEO & Digital Marketing | ThinkTech",
           description: "We provide SEO services as well as Digital Marketing for the web sites."          
-  %>
-  <% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "seo thinktech", "Search engine optimization", "Search engine optimization thinktech", "Search engine optimization Calgary", "SEO thinktech", "SEO Calgary", "Digital Marketing Calgary", "thinktech Digital Marketing", "SEO & Digital Marketing ThinkTech" ] %>
-
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
-	<body>
-    
+  	%>
+  	<% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "seo thinktech", "Search engine optimization", "Search engine optimization thinktech", "Search engine optimization Calgary", "SEO thinktech", "SEO Calgary", "Digital Marketing Calgary", "thinktech Digital Marketing", "SEO & Digital Marketing ThinkTech" ] %>
     
     <div id="home">
     	<div class="headerLine mar_topm10p">
@@ -20,7 +9,7 @@
 			<div class="container pad_bot5">
 				<div class="row wrap">
 					<div class="col-xs-12 blog text-center">
-						<h2>SEO & Digital Marketing</h2>
+						<h2>SEO &amp; Digital Marketing</h2>
 					</div>
                 </div>
 			</div>
@@ -51,8 +40,3 @@
 		</div>		
 		
     </div>
-
-    
-	</body>
-	
-</html>
