--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,7 +22,7 @@
 <link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
 
 <link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
-<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" />
 <link rel="stylesheet" type="text/css" href="/assets/style.css">
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
 
@@ -89,11 +89,7 @@
 </div>    
 		
 		
-
-	
-		
-		
-	<script src="/assets/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/assets/jquery.prettyPhoto.js" type="text/javascript" ></script>
 	<script src="/assets/bootstrap.min.js"></script>
 	<script src="/assets/jquery.slicknav.js"></script>
 	<script type="text/javascript">
