--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -4,11 +4,11 @@
 		<div class="row">
 			<div class="logo col-xs-8 col-md-3">
 					<a href="/">
-						<img class="logo_width" src="/assets/ThinkTech_white.png">
+						<img class="logo_width" src="/assets/ThinkTech_white.png" alt="Logo">
 					</a>
 			</div>
 			<div class="col-md-9">
-				<div class="navmenu"style="text-align: center;">
+				<div class="navmenu text-center">
 					
 					<ul id="menu">
 						<li class="" ><a href="/#home">Home</a></li>
