--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,7 @@
 <link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
 <link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
 <link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
-<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" />
 <link rel="stylesheet" type="text/css" href="/assets/style.css">
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
@@ -46,7 +46,6 @@
 	});
 </script>
 <% end %>
-
     
     <!--home start-->
     
@@ -55,15 +54,14 @@
 	
 	<%= render "articles/menu" %>
 		<div class="container">
-			<div class="row wrap">
-				
+			<div class="row wrap">				
 
 					<!-- Button trigger modal -->
 		<div class="col-sm-6"></div>			
 		<div class="col-sm-6 pad_top1">
 			<p class="col_white">See how your website is pulling your business online</p>
 		    <div class="input-group">
-		      <input type="text" class="form-control", id="site_id"  placeholder="Type in your website address here">
+		      <input type="text" class="form-control" id="site_id" placeholder="Type in your website address here">
 		      <span class="input-group-btn">
 		        <button type="button" onclick="search(this.id)" id="1" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Go!</button>
 		      </span>
@@ -195,7 +193,7 @@
 				<div class="row Fresh">
 					<div class="col-md-4 Des">
 						<i class="fa fa-heart"></i>
-						<h4>Fresh & Clean Design</h4>
+						<h4>Fresh &amp; Clean Design</h4>
 						<!--<p>Nulla consectetur ornare nibh, a auctor mauris scelerisque eu proin nec urna quis justo adipiscing auctor ut auctor. feugiat </p>-->
 					</div>
 					<div class="col-md-4 Ver">
@@ -546,10 +544,10 @@
 				</div>
 			</div>
 		</div>
-       <section class="clients">
+    <section class="clients">
 
-         <div class="hidden-xs p70" id="client_carousel">
-    <div id="myCarousel" class="carousel slide">
+    <div class="hidden-xs p70" id="client_carousel">
+    	<div id="myCarousel" class="carousel slide">
      
     <!-- Carousel items -->
     <div class="carousel-inner">
@@ -590,18 +588,13 @@
         </div><!--/row-fluid-->
     </div><!--/item-->
      
-    
-     
     </div><!--/carousel-inner-->
      
     <a class="left carousel-control"  href="#myCarousel" data-slide="prev">‹</a>
     <a class="right carousel-control"  href="#myCarousel" data-slide="next">›</a>
-    </div><!--/myCarousel-->
-     
+    	</div><!--/myCarousel-->     
     </div><!--/well-->
-
-       </section>
-			
+    </section>			
 			
     </div>
     
@@ -787,8 +780,8 @@
 				<!--</div>-->
 			<!--</div>-->
 		
-		</div>
-    </div>
+		<!-- </div> -->
+    <!-- </div> -->
 
     <!--contact start-->
     
@@ -820,7 +813,7 @@
 					  </div>
 					  
 					  <div class="form-group">
-					    <%= f.text_area :message, type:"text", tabindex: "4", class: "col-md-12 col-xs-12 Message",  placeholder: 'Write your message', rows: "8"  %>
+					    <%= f.text_area :message, tabindex: "4", class: "col-md-12 col-xs-12 Message",  placeholder: 'Write your message', rows: "8"  %>
 					  </div>
 					  <div class="row">
 						  <div class="cBtn col-xs-12">
@@ -848,7 +841,7 @@
 		</div>
 		<div class="line6">
 					<!--<iframe src="https://www.google.com/maps/embed/v1/place?q=888%203%20Street%20Southwest%2C%20Calgary%2C%20AB%2C%20Canada&key=AIzaSyCevQjKK8Aab493DXROCLYf_XJc1R_dgtw" width="100%" height="750" frameborder="0" style="border:0"></iframe>		-->
-          <iframe src="https://www.google.com/maps/embed/v1/place?q=888%203%20Street%20Southwest%2C%20Calgary%2C%20AB%2C%20Canada&key=AIzaSyCevQjKK8Aab493DXROCLYf_XJc1R_dgtw" width="100%" height="750" frameborder="0" style="border:0"></iframe>
+          <iframe src="https://www.google.com/maps/embed/v1/place?q=888%203%20Street%20Southwest%2C%20Calgary%2C%20AB%2C%20Canada&amp;key=AIzaSyCevQjKK8Aab493DXROCLYf_XJc1R_dgtw" width="100%" height="750" style="border:0"></iframe>
         </div>
 		<div class="container">
 			<div class="row ftext">
@@ -922,7 +915,7 @@
     </div>		
 		
 		
-	<script src="/assets/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/assets/jquery.prettyPhoto.js" type="text/javascript"></script>
 	<script src="/assets/bootstrap.min.js"></script>
 	<script src="/assets/jquery.slicknav.js"></script>
 	<script type="text/javascript">
