bug fixed for seo

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -2079,6 +2079,10 @@ margin-bottom: 35px !important;
 	padding-top: 2em;
 }
 
+.pad_bot2 {
+	padding-bottom: 2em;
+}
+
 .pad_bot5 {
 	padding-bottom: 5em;
 }
