--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -11,7 +11,7 @@
 				<div class="navmenu text-center">
 					
 					<ul id="menu">
-						<li class="" ><a href="/#home">Home</a></li>
+						<li><a href="/#home">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li><a href="/#service">Services</a></li>
 						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Products<b class="caret"></b></a>
