--- a/app/views/static_pages/service_seo.html.erb
+++ b/app/views/static_pages/service_seo.html.erb
@@ -3,7 +3,7 @@
   	%>
   	<% metamagic keywords: [:keywords, "SEO", "Digital Marketing", "SEO & Digital Marketing", "seo thinktech", "Search engine optimization", "Search engine optimization thinktech", "Search engine optimization Calgary", "SEO thinktech", "SEO Calgary", "Digital Marketing Calgary", "thinktech Digital Marketing", "SEO & Digital Marketing ThinkTech" ] %>
     
-    <div id="home">
+    <div id="home" class="pad_bot2">
     	<div class="headerLine mar_topm10p">
 		<%= render "/articles/menu" %>
 			<div class="container pad_bot5">
