--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,6 +10,7 @@
 <% content_for :link_script do %>
 <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
 <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
@@ -17,7 +18,6 @@
 <link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
 <link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" />
 <link rel="stylesheet" type="text/css" href="/assets/style.css">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
 <script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
 <script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
@@ -892,7 +892,7 @@
 				<div class="row downLine">
 					<div class="col-md-12 text-right">
 						<!--input  id="searchPattern" type="search" name="pattern" value="Search the Site" onblur="if(this.value=='') {this.value='Search the Site'; }" onfocus="if(this.value =='Search the Site' ) this.value='';this.style.fontStyle='normal';" style="font-style: normal;"/-->
-						<input  id="searchPattern" type="search" placeholder="Search the Site"/><i class="glyphicon glyphicon-search" style="font-size: 13px; color:#a5a5a5;" id="iS"></i>
+						<!-- <input  id="searchPattern" type="search" placeholder="Search the Site"/><i class="glyphicon glyphicon-search" style="font-size: 13px; color:#a5a5a5;" id="iS"></i> -->
 					</div>
 					<div class="col-md-4 text-left copy">
 						<p>Copyright &copy; 2015 ThinkTech. All Rights Reserved.</p>
@@ -1036,7 +1036,7 @@
 			});
 		});		
 	</script>	
-	<script type="text/javascript" charset="utf-8">
+	<script type="text/javascript">
 
 		jQuery(document).ready(function(){
 			jQuery(".pretty a[rel^='prettyPhoto']").prettyPhoto({animation_speed:'normal',theme:'light_square',slideshow:3000, autoplay_slideshow: true, social_tools: ''});
