--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,9 +16,9 @@
 				</div>
 				<div class="col-sm-4 text-right col_white">
 	                <% if blogger_signed_in? %>
-	                <p><b><%= current_blogger.email %></b></p>
-	                <h4><b><%= link_to "New Article", new_article_path %></b></h4>               
-	                <p><b><%= link_to 'Logged In [click to logout]', destroy_blogger_session_path, :method => :delete %></b></p>                
+	                <strong><%= current_blogger.email %></strong>
+	                <h4><strong><%= link_to "New Article", new_article_path %></strong></h4>
+	                <strong><%= link_to 'Logged In [click to logout]', destroy_blogger_session_path, :method => :delete %></strong>                
 	                <% end %>
 	            </div>		
 				
@@ -42,7 +42,7 @@
 
 		                    <h2><%= link_to  article.title.html_safe, article_path(article.slug) %></h2>
 
-		                        <p><%= article.body.html_safe %></p>
+		                        <%= article.body.html_safe %>
 
 		                        <%= link_to "Read More ".html_safe + "<i class='fa fa-angle-right'></i>".html_safe, article_path(article.slug), class: "btn btn-primary" %>
 		                        <% if blogger_signed_in? %>
