--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
 <% content_for :link_script do %>
 <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
 <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700%7COpen+Sans:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
@@ -388,7 +388,7 @@
 				<div id="project1" ></div>
 				<div class="row Ama">
 					<div class="col-md-12">
-					<span name="projects" id="projectss"></span>
+					<span id="projectss"></span>  <!-- name="projects" -->
 					<h3>Our Services</h3>
 					<p>WE ARE HERE TO PROVIDE EXPERTISE</p>
 					</div>
