--- a/app/views/static_pages/service_seo.html.erb
+++ b/app/views/static_pages/service_seo.html.erb
@@ -27,10 +27,10 @@
 								</div>
 							</div>
 							<div class="col-sm-6">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/d4aijRJFOq4?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/d4aijRJFOq4?rel=0&amp;showinfo=0" allowfullscreen style="border:0"></iframe>
 							</div>
 							<div class="col-sm-6">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/rw-tlt3AnI0?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/rw-tlt3AnI0?rel=0&amp;showinfo=0" allowfullscreen style="border:0"></iframe>
 							</div>
 
 		                </div>    
