--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -25,7 +25,7 @@
                         
                     <div class="col-xs-12 col-sm-10">
                         <h2 class="readMore"><%= @article.title.html_safe %></h2>
-                        <p><%= @article.body.html_safe %></p>
+                        <%= @article.body.html_safe %>
                     </div> 
                 </div>
             </div>
