--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,16 +16,14 @@
 
 <link href="https://plus.google.com/104929529486535940210" rel="publisher" />
 <link href='https://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700%7COpen+Sans:700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="/assets/font-awesome.css">
 <link rel='stylesheet' id='camera-css'  href='/assets/camera.css' type='text/css' media='all'>
-
 <link rel="stylesheet" type="text/css" href="/assets/slicknav.css">
 <link rel="stylesheet" href="/assets/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" />
 <link rel="stylesheet" type="text/css" href="/assets/style.css">
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700|Open+Sans:700' rel='stylesheet' type='text/css'>
-
 <script type="text/javascript" src="/assets/jquery-1.8.3.min.js"></script>		
 <script type="text/javascript" src="/assets/jquery.mobile.customized.min.js"></script>
 <script type="text/javascript" src="/assets/jquery.easing.1.3.js"></script> 
