--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -208,7 +208,7 @@
 			});
 		});		
 	</script>	
-	<script type="text/javascript" charset="utf-8">
+	<script type="text/javascript">
 
 		jQuery(document).ready(function(){
 			jQuery(".pretty a[rel^='prettyPhoto']").prettyPhoto({animation_speed:'normal',theme:'light_square',slideshow:3000, autoplay_slideshow: true, social_tools: ''});
