change in Welcome text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,30 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="coverage" content="Worldwide" />
+  <meta name="page-topic" content="Website Design, Development and SEO in Calgary" />
+  <meta name="allow-search" content="yes" />
+  <meta name="copyright" content="Thethinktech"/>
+  <meta name="robots" content="index, follow"/>
+  <meta name="rating" content="safe for kids"/>
+  <meta name="googlebot" content="index, follow"/>
+  <meta name="yahooseeker" content="index, follow"/>
+  <meta name="msnbot" content="index, follow" />
+  <meta name="Rating" content="General" />
+  <meta name="category" content="Website Design, Development and SEO"/>
+  <meta name="author" content="www.thethinktech.com"/>
+  <meta name="generator" content="http://www.thethinktech.com"/>
+  <meta name="reply-to" content="ashish@thethinktech.com"/>
+  <meta name="allow-search" content="yes" />
+  <meta name="revisit-after" content="daily" />
+  <meta name="distribution" content="global"/>
+  <meta name="expires" content="never"/>
+  <meta name="language" content="english"/>
+  <meta name="geo.region" content="Calgary-Alberta- Canada"/>
+  <meta name="geo.placename" content="Calgary-Alberta- Canada"/>
+  <meta name="geo.position" content="51.0453198,-114.0692226"/>
+  <meta name="ICBM" content="51.0453198,-114.0692226"/>
+  <base href="http://www.thethinktech.com">
 </head>
 <body>
 <!-- Google Tag Manager -->
