--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -67,9 +67,9 @@
 		<div class="col-sm-6 pad_top1">
 			<p class="col_white">See how your website is pulling your business online</p>
 		    <div class="input-group">
-		      <input type="text" class="form-control", id="site_id"  placeholder="Type in your website address here">
+		      <input type="text" class="form-control",  id="site_id"  placeholder="Type in your website address here">
 		      <span class="input-group-btn">
-		        <button type="button" onclick="search(this.id)" id="1" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Go!</button>
+		        <button type="button" onclick="search(this.id)" id="1" class="btn btn-primary btn-raised" data-toggle="modal" data-target="#myModal">Go!</button>
 		      </span>
 		    </div>
 		 </div>
@@ -109,8 +109,8 @@
 			  
 			  <div class="row">
 				  <div class="col-sm-offset-3 col-sm-9 col-lg-offset-2 col-lg-10">
-				  	<%= f.submit "Clear Form", type: :reset, tabindex: "4", :class => 'btn btn-primary' %>
-					<%= f.submit 'Send Message', tabindex: "5", :class => 'btn btn-primary' %>
+				  	<%= f.submit "Clear Form", type: :reset, tabindex: "4", :class => 'btn btn-primary btn-raised' %>
+					<%= f.submit 'Send Message', tabindex: "5", :class => 'btn btn-primary btn-raised' %>
 				  </div>
 			  </div>
 
