--- a/app/views/articles/_menu.html.erb
+++ b/app/views/articles/_menu.html.erb
@@ -13,7 +13,14 @@
 					<ul id="menu">
 						<li><a href="/#home">Home</a></li>
 						<li><a href="/#about">About</a></li>
-						<li><a href="/#service">Services</a></li>
+						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="/#service">Services<b class="caret"></b></a>
+							<ul class="dropdown-menu">
+				                <li><a href="#">Web Development</a></li>
+				                <li><a href="#">App Development</a></li>
+				                <li><a href="#">SEO &amp; Digital Marketing</a></li>
+				                <li><a href="#">Custom Development</a></li>
+				            </ul>
+				        </li>
 						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Products<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 				                <li><a href="#">Restaurants App</a></li>
@@ -22,7 +29,14 @@
 				                <li><a href="#">Appointment Scheduler App</a></li>
 				            </ul>
 				        </li>
-						<li><a href="/#technologies">Technologies</a></li>
+						<li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="/#technologies">Technologies<b class="caret"></b></a>
+							<ul class="dropdown-menu">
+				                <li><a href="#">Mobile</a></li>
+				                <li><a href="#">Web Technologies</a></li>
+				                <li><a href="#">Web CMS</a></li>
+				                <li><a href="#">Cloud Platforms</a></li>
+				            </ul>
+				        </li>
 						<li><a href="/#client">Clients</a></li>
 						<li><a href="/articles">Blog</a></li>
 						<li class="last"><a href="/#contact">Contact</a></li>
