--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -71,7 +71,7 @@
 				</div>
 				<div class="col-md-8 text-right dm">
 					<ul id="downMenu">
-						<li class="active" ><a href="#home">Home</a></li>
+						<li class="active" ><a href="/#home">Home</a></li>
 						<li><a href="/#about">About</a></li>
 						<li><a href="/#service">Services</a></li>
 						<li><a href="/#technologies">Technologies</a></li>
