--- a/app/views/static_pages/product_restaurant.html.erb
+++ b/app/views/static_pages/product_restaurant.html.erb
@@ -1,4 +1,4 @@
-	<% meta title: "App Development | ThinkTech",
+	<% meta title: "Restaurant App | ThinkTech",
           description: ""          
   %>
 	<% metamagic keywords: [:keywords, "", "", "", "", ""] %>    
@@ -20,11 +20,11 @@
 				<div class="col-sm-12">		         	
 		            <div class="blog-item">
 		                <div class="row">
-		                    <div class="col-xs-12 col-sm-2 text-center">
-		                        
+		                    <div class="col-xs-12 text-center">
+		                        <p>Coming soon</p>
 		                    </div>
 		                        
-		                    <div class="col-xs-12 col-sm-10">
+		                    <div class="col-xs-12 ">
 		                                                     
 							</div>
 		                </div>    
