--- a/app/views/static_pages/technology_web.html.erb
+++ b/app/views/static_pages/technology_web.html.erb
@@ -1,4 +1,4 @@
-	<% meta title: "App Development | ThinkTech",
+	<% meta title: "Web Technologies | ThinkTech",
           description: ""          
   %>
 	<% metamagic keywords: [:keywords, "", "", "", "", ""] %>    
@@ -10,7 +10,7 @@
 			<div class="container pad_bot5">
 				<div class="row wrap">
 					<div class="col-xs-12 blog text-center">
-						<h2>App Development</h2>
+						<h2>Web Technologies</h2>
 					</div>
                 </div>
 			</div>
@@ -20,11 +20,11 @@
 				<div class="col-sm-12">		         	
 		            <div class="blog-item">
 		                <div class="row">
-		                    <div class="col-xs-12 col-sm-2 text-center">
-		                        
+		                    <div class="col-xs-12 col-sm-12 text-center">
+		                        <p>Coming soon</p>
 		                    </div>
 		                        
-		                    <div class="col-xs-12 col-sm-10">
+		                    <div class="col-xs-12 col-sm-12">
 		                                                     
 							</div>
 		                </div>    
