--- a/app/views/static_pages/product_3dproduct.html.erb
+++ b/app/views/static_pages/product_3dproduct.html.erb
@@ -1,4 +1,4 @@
-	<% meta title: "App Development | ThinkTech",
+	<% meta title: "3D Product Catalogue App | ThinkTech",
           description: ""          
   %>
 	<% metamagic keywords: [:keywords, "", "", "", "", ""] %>    
@@ -10,21 +10,22 @@
 			<div class="container pad_bot5">
 				<div class="row wrap">
 					<div class="col-xs-12 blog text-center">
-						<h2>App Development</h2>
+						<h2>3D Product Catalogue App</h2>
 					</div>
                 </div>
 			</div>
 		</div>
+
 		<div class = "container minh">
 			<div class= "row">
 				<div class="col-sm-12">		         	
 		            <div class="blog-item">
 		                <div class="row">
-		                    <div class="col-xs-12 col-sm-2 text-center">
-		                        
+		                    <div class="col-xs-12 col-sm-12 text-center">
+		                        <p>Coming soon</p>
 		                    </div>
 		                        
-		                    <div class="col-xs-12 col-sm-10">
+		                    <div class="col-xs-12 col-sm-12">
 		                                                     
 							</div>
 		                </div>    
