--- a/app/views/static_pages/service_custom.html.erb
+++ b/app/views/static_pages/service_custom.html.erb
@@ -20,11 +20,11 @@
 				<div class="col-sm-12">		         	
 		            <div class="blog-item">
 		                <div class="row">
-		                    <div class="col-xs-12 col-sm-2 text-center">
-		                        
+		                    <div class="col-xs-12 col-sm-12 text-center">
+		                        <p>Coming soon</p>
 		                    </div>
 		                        
-		                    <div class="col-xs-12 col-sm-10">
+		                    <div class="col-xs-12 col-sm-12">
 		                                                     
 							</div>
 		                </div>    
