--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -407,13 +407,13 @@
 
              <div class="row">
                <div class="col-lg-6 p45">
-                 <h3 class="section-subtitle"><i class="fa fa-rocket"></i> Web Development</h3>
+                 <a href= "/web-development"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> Web Development</h3></a>
                  <p class="text-md text-italic text-muted">
                    It’s about accessibility of your Business online. Ready or not, your audience is interacting with your site on devices that likely didn’t exist when your site was originally made. The easier it is for users to get your content how and where they want it, the better your site will perform.
                  </p>
                </div>
                <div class="col-lg-6 p45">
-                 <h3 class="section-subtitle"><i class="fa fa-rocket"></i> App Development</h3>
+                 <a href= "/app-development"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> App Development</h3></a>
                  <p class="text-md text-italic text-muted">
                     Right from assessing your business needs on Mobile Platform to implementing them, we’re here to help every step of the way. We have full-scale team of mobile app developers, project managers, graphics and UI/UX designers, and quality assurance testers on hand ready to support you. No request is too big.
                  </p>
@@ -421,13 +421,13 @@
              </div>
              <div class="row">
                <div class="col-lg-6 p45">
-                 <a href="/service-seo"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO &amp; Digital Marketing</h3></a>
+                 <a href="/seo-digital-marketing"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> SEO &amp; Digital Marketing</h3></a>
                  <p class="text-md text-italic text-muted">
                    SEO is an ever-changing landscape. With smartest online strategies, and intelligent execution, we will help you own your keywords on the first page of Google and Bing search engines. It’s time to start generating more qualified leads by driving more visitors to your website.
                  </p>
                </div>
                <div class="col-lg-6 p45">
-                 <h3 class="section-subtitle"><i class="fa fa-rocket"></i> Custom Development</h3>
+                 <a href="/custom-development"><h3 class="section-subtitle"><i class="fa fa-rocket"></i> Custom Development</h3></a>
                  <p class="text-md text-italic text-muted">
                    We design our custom software solutions to address the unique challenges and requirements of your organization. We take time to understand your specific technological needs, and ensure that we are creating a quality product satisfying your business needs. We support and maintain the software throughout the product lifecycle.
                  </p>
@@ -479,6 +479,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="container">
           <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
@@ -486,7 +487,7 @@
                 <div class="col-lg-6 p45">
                   <div class="icon-box text-center wow fadeInLeft showdelay2 animated" style="visibility: visible;">
                     <i class="fa fa-apple fa-4x"></i>
-                    <h3>Mobile</h3>
+                    <a href="/mobile"><h3>Mobile</h3></a>
                     <p>Native Android</p>
                     <p>Native iOS</p>
                     <p>Hybrid/Web Apps</p>
@@ -495,7 +496,7 @@
                 <div class="col-lg-6 p45">
                   <div class="icon-box text-center wow fadeInLeft showdelay2 animated" style="visibility: visible;">
                     <i class="fa fa-code fa-4x"></i>
-                    <h3>Web Technologies</h3>
+                    <a href="/web-technologies"><h3>Web Technologies</h3></a>
                     <p>Bootstrap, Ruby on Rails</p>
                     <p>PHP, Python, AngularJS</p>
                     <p>NodeJS, .Net</p>
@@ -506,7 +507,7 @@
                 <div class="col-lg-6 p45">
                   <div class="icon-box text-center wow fadeInLeft showdelay2 animated" style="visibility: visible;">
                     <i class="fa fa-html5 fa-4x"></i>
-                    <h3>Web CMS</h3>
+                    <a href="/web-cms"><h3>Web CMS</h3></a>
                     <p>Wordpress</p>
                     <p>Drupal</p>
                     <p>Joomla</p>
@@ -515,7 +516,7 @@
                 <div class="col-lg-6 p45">
                   <div class="icon-box text-center wow fadeInLeft showdelay2 animated" style="visibility: visible;">
                     <i class="fa fa-cloud fa-4x"></i>
-                    <h3>Cloud Platforms</h3>
+                    <a href="/cloud-platforms"><h3>Cloud Platforms</h3></a>
                     <p>Amazon Web Services</p>
                     <p>Heroku, Windows Azure</p>
                     <p>Google Cloud</p>
