--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -588,6 +588,45 @@
             </div>
         </div><!--/row-fluid-->
     </div><!--/item-->
+
+    <div class="item">
+        <div class="row-fluid">
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/logo-ANZAC.png", class: "image_responsive client_logo", alt: "Anzac") %><h5><strong>ANZAC SECURITY SERVICES</strong></h5>
+            </div>       
+
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/logo-APPRECIADO.png", class: "image_responsive client_logo", alt: "Appreciado") %><h5><strong>APPRECIADO</strong></h5>
+            </div>
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/logo-CARPET-MILLS-OUTLET.png", class: "image_responsive client_logo", alt: "Carpet Mills Outlet") %><h5><strong>CARPET MILLS OUTLET</strong></h5>
+            </div>
+            
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/logo-delhidarbar.png", class: "image_responsive client_logo", alt: "Delhidarbar") %><h5><strong>DELHIDARBAR</strong></h5>
+            </div>
+        </div><!--/row-fluid-->
+    </div><!--/item-->
+
+    <div class="item">
+        <div class="row-fluid">
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/logo-realestate.png", class: "image_responsive client_logo", alt: "Twins") %><h5><strong>TWINS</strong></h5>
+            </div>       
+
+            <div class="col-xs-3 col-sm-3  text-center">
+              <%= image_tag("clients/logo-taj.png", class: "image_responsive client_logo", alt: "Taj Indian Restaurant") %><h5><strong>TAJ INDIAN RESTAURANT</strong></h5>
+            </div>
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/logo-WATERTECH.png", class: "image_responsive client_logo", alt: "Watertech Plumbing") %><h5><strong>WATERTECH PLUMBING</strong></h5>
+            </div>
+            <!-- duplicate CMIT-->
+            <div class="col-xs-3 col-sm-3 text-center">
+              <%= image_tag("clients/cmit_client.png", class: "image_responsive client_logo", alt: "CMIT") %><h5><strong>CMIT SOLUTIONS</strong></h5>
+            </div>
+            
+        </div><!--/row-fluid-->
+    </div><!--/item-->
      
     </div><!--/carousel-inner-->
      
