--- a/app/views/static_pages/product_restaurant.html.erb
+++ b/app/views/static_pages/product_restaurant.html.erb
@@ -10,7 +10,7 @@
 			<div class="container pad_bot5">
 				<div class="row wrap">
 					<div class="col-xs-12 blog text-center">
-						<h2>Restaurant App</h2>
+						<h2>Restaurants App</h2>
 					</div>
                 </div>
 			</div>
